--- a/soccer/src/index.html
+++ b/soccer/src/index.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>React Starter</title>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+		<title>Soccer Fuzzy Logic</title>
 	</head>
 	<body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
 </html>
